Experiment working now

--- a/parlay_interface.ipynb
+++ b/parlay_interface.ipynb
@@ -137,7 +137,7 @@
    "source": [
     "print(\"prefilter querying\")\n",
     "prefiltering_start = time.time()\n",
-    "prefilter_results = prefilter_index.batch_query(queries, filters, queries.shape[0], top_k)\n",
+    "prefilter_results = prefilter_index.batch_search(queries, filters, queries.shape[0], top_k)\n",
     "prefiltering_end = time.time()\n",
     "prefiltering_time = prefiltering_end - prefiltering_start\n",
     "print(f\"prefiltering time: {prefiltering_time:.3f}s\")"
@@ -160,7 +160,7 @@
    "source": [
     "print(\"index querying\")\n",
     "start = time.time()\n",
-    "index_results = index.batch_filter_search(queries, filters, queries.shape[0], top_k)\n",
+    "index_results = index.batch_search(queries, filters, queries.shape[0], top_k)\n",
     "end = time.time()\n",
     "index_time = end - start\n",
     "print(f\"index time: {index_time:.3f}s\")"
